<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    android:clipToPadding="false"
    android:fillViewport="true"
    android:scrollbarStyle="outsideOverlay"
    tools:context=".bloodonateform">

    <LinearLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/back"
            android:layout_width="58dp"
            android:layout_height="28dp"
            android:padding="10dp"
        android:src="@drawable/ic_blood_transfusion"
            android:scaleType="center"
            app:layout_constraintBottom_toTopOf="@+id/email"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.016"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.083"
            tools:ignore="MissingConstraints" />
        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="382dp"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            android:scaleType="centerInside"
            android:layout_height="161dp"
            app:lottie_rawRes="@raw/bloodtransfusionkawaii" />

        <LinearLayout
            android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:text="Name:"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
            <EditText
                android:layout_marginLeft="52dp"
                android:id="@+id/input_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/displayName"
                android:inputType="text"
               android:textColor="@color/black" />
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Sex:" />

            <Spinner
                android:layout_marginLeft="67dp"
                android:id="@+id/gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/gender">

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Blood Group:" />

            <Spinner
                android:layout_marginLeft="13dp"
                android:id="@+id/inputBloodGroup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/Blood_Group">

            </Spinner>
        </LinearLayout>
        <LinearLayout
            android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Contact No:" />
            <EditText
                android:layout_marginLeft="20dp"
                android:id="@+id/inputMobile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="text"
             android:textColor="@color/black" />
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Address:" />
            <EditText
                android:layout_marginLeft="40dp"
                android:id="@+id/inputAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/userAddress"
                android:inputType="text"
                android:textColor="@android:color/black" />
        </LinearLayout>

        <LinearLayout
            android:padding="3dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Division:" />

            <Spinner
                android:layout_marginLeft="42dp"
                android:id="@+id/inputDivision"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:entries="@array/division_list">
            </Spinner>
        </LinearLayout>

        <EditText
            android:id="@+id/input_userEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_email"
            android:inputType="textEmailAddress"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />

        <EditText
            android:id="@+id/input_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_confirm_password"
            android:inputType="textPassword"
            android:textColor="@android:color/black" />
        <CheckBox
            android:id="@+id/checkbox"
            android:text="Mark this to be a donor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_gravity="center_horizontal"
            android:id="@+id/button_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"

            android:text="@string/signup"
            android:textAllCaps="false"
         />

        <Button
            android:id="@+id/save"
            android:onClick="Save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"

            android:text="Save" />

        <Button
            android:id="@+id/retr"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:onClick="Get"

            android:text="Retrieve" />

        <Button
            android:onClick="clear"
            android:id="@+id/clear"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignRight="@+id/etEmail"
            android:layout_centerVertical="true"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true"

            android:text="Clear" />



    </LinearLayout>

</ScrollView>